--- a/q/272523.html
+++ b/q/272523.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>032</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
+<tr d-ix="0"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
 <tr d-ix="1"><td>031</td><td>Google Sheets</td><td>240412T211245Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272531#272531">doubleun</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
 <tr d-ix="3"><td>004</td><td>Jelly</td><td>240412T193548Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272529#272529">Jonathan</a></td></tr>
@@ -35,12 +35,12 @@
 <tr d-ix="6"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
 <tr d-ix="7"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-pl</code>, 32 bytes</h1>
-<p>Same idea as @xnor's answer.</p>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-pl</code>, 23 bytes</h1>
+<p>Same idea as @xnor's answer but uses the power of 2 rather than bitstring length to save bytes.</p>
 
-<pre class="lang-perl prettyprint-override"><code>$_=-1+length sprintf'%b',--$_^&lt;&gt;
+<pre class="lang-perl prettyprint-override"><code>$_=0|log(--$_^&lt;&gt;)/log 2
 </code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18l3lbXUDsnNS@9JEOhuKAoM68kTV01SV1HV1clPs7G7v9/Q3MuI8N/@QUlmfl5xf91fU31DAwN/usW5AAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K0gtyjH9/18l3tagJic/XUNXVyU@zsZOUx/IUTD6/9/YiMvY6F9@QUlmfl7xf11fUz0DQ4P/ugU5AA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Google Sheets, 31 bytes</h1>
 <pre><code>=len(base(bitxor(A1-1,B1),2))-1
