--- a/q/272523.html
+++ b/q/272523.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Zsh</td><td>240413T024738Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272536#272536">GammaFun</a></td></tr>
+<tr d-ix="0"><td>028</td><td>Zsh</td><td>240413T024738Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272536#272536">GammaFun</a></td></tr>
 <tr d-ix="1"><td>004</td><td>Jelly</td><td>240412T193548Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272529#272529">Jonathan</a></td></tr>
 <tr d-ix="2"><td>032</td><td>JavaScript Node.js</td><td>240412T230903Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272534#272534">l4m2</a></td></tr>
 <tr d-ix="3"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
@@ -37,13 +37,13 @@
 <tr d-ix="8"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
 <tr d-ix="9"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 30 bytes</h1>
-<p>Port of @xnor's Python solution.</p>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
+<p>Port of @xnor's Python solution. Returns via exit code.</p>
 
 <pre class="lang-sh prettyprint-override"><code>l=$[[#2]($1-1)^$2]
-&lt;&lt;&lt;$[$#l-3]
+bye $#l-3
 </code></pre>
-<p><a href="https://tio.run/##qyrO@J@moanxP8dWJTpa2ShWQ8VQ11AzTsUolsvGxkYlWkU5R9c49r8mV5qCobmCkSGQNjJSMDb/DwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##qyrO@J@moanxP8dWJTpa2ShWQ8VQ11AzTsUoliupMlVBRTlH1/i/JleagqG5gpGhtUJqcka@goo9UMDISMHYHC7wHwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 4 bytes</h1>
 <pre><code>rọ2Ṁ
