--- a/q/106182.html
+++ b/q/106182.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::106182</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>020</td><td>Swift</td><td>230723T224214Z</td><td><a href="https://codegolf.stackexchange.com/questions/106182/multiply-two-numbers/263232#263232">macOSist</a></td></tr>
 <tr d-ix="1"><td>058</td><td>ReRegex</td><td>231001T220651Z</td><td><a href="https://codegolf.stackexchange.com/questions/106182/multiply-two-numbers/265661#265661">ATaco</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Piet + asciipiet</td><td>220724T031957Z</td><td><a href="https://codegolf.stackexchange.com/questions/106182/multiply-two-numbers/250255#250255">naffetS</a></td></tr>
@@ -2465,6 +2466,7 @@ f(7)(9)                   //returns 63
 
 <p>Input format can be almost anything (this simply multiplies the first two decimal integers it finds in the input).</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -2481,7 +2483,7 @@ f(7)(9)                   //returns 63
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/106182/">106182</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
