--- a/q/70837.html
+++ b/q/70837.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::70837</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>132</td><td>YASEPL</td><td>240213T184615Z</td><td><a href="https://codegolf.stackexchange.com/questions/70837/say-what-you-see/270055#270055">madeforl</a></td></tr>
 <tr d-ix="1"><td>014</td><td>Japt h</td><td>231115T104806Z</td><td><a href="https://codegolf.stackexchange.com/questions/70837/say-what-you-see/266769#266769">Shaggy</a></td></tr>
 <tr d-ix="2"><td>3875</td><td>Vyxal</td><td>231114T142845Z</td><td><a href="https://codegolf.stackexchange.com/questions/70837/say-what-you-see/266735#266735">pacman25</a></td></tr>
@@ -468,6 +469,7 @@ puts i
        % implicitly display
 </code></pre>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -484,7 +486,7 @@ puts i
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/70837/">70837</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
