--- a/q/36260.html
+++ b/q/36260.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::36260</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>043</td><td>LOLCODE</td><td>240212T220707Z</td><td><a href="https://codegolf.stackexchange.com/questions/36260/make-an-error-quine/270035#270035">Adelie</a></td></tr>
 <tr d-ix="1"><td>998</td><td>Perl 5</td><td>240227T200311Z</td><td><a href="https://codegolf.stackexchange.com/questions/36260/make-an-error-quine/271355#271355">Dom Hast</a></td></tr>
 <tr d-ix="2"><td>nan</td><td></td><td>240214T144900Z</td><td><a href="https://codegolf.stackexchange.com/questions/36260/make-an-error-quine/270070#270070">madeforl</a></td></tr>
@@ -2046,6 +2047,7 @@ error.rb:1: syntax error, unexpected tI...
           ^
 </code></pre>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -2062,7 +2064,7 @@ error.rb:1: syntax error, unexpected tI...
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/36260/">36260</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
