--- a/q/263650.html
+++ b/q/263650.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::263650</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>257</td><td>AWK</td><td>230817T142533Z</td><td><a href="https://codegolf.stackexchange.com/questions/263650/s-n-a-k-e-a-r-o-u-n-d/264295#264295">Marius_C</a></td></tr>
 <tr d-ix="1"><td>276</td><td>Java JDK</td><td>230824T181610Z</td><td><a href="https://codegolf.stackexchange.com/questions/263650/s-n-a-k-e-a-r-o-u-n-d/264598#264598">Donat</a></td></tr>
 <tr d-ix="2"><td>271</td><td>BASH</td><td>230828T095017Z</td><td><a href="https://codegolf.stackexchange.com/questions/263650/s-n-a-k-e-a-r-o-u-n-d/264698#264698">Ivan</a></td></tr>
@@ -711,6 +712,7 @@ def f(n,s):
 </code></pre>
 <p>Output the head of the snake.</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -727,7 +729,7 @@ def f(n,s):
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/263650/">263650</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
