--- a/q/203261.html
+++ b/q/203261.html
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>003</td><td>Volatile</td><td>230908T204342Z</td><td><a href="https://codegolf.stackexchange.com/questions/203261/make-your-code-error-but-only-sometimes/265044#265044">bluswimm</a></td></tr>
 <tr d-ix="1"><td>003</td><td>05AB1E</td><td>210107T013346Z</td><td><a href="https://codegolf.stackexchange.com/questions/203261/make-your-code-error-but-only-sometimes/217397#217397">Makonede</a></td></tr>
 <tr d-ix="2"><td>030</td><td>C gcc</td><td>230812T132936Z</td><td><a href="https://codegolf.stackexchange.com/questions/203261/make-your-code-error-but-only-sometimes/264074#264074">Joao-3</a></td></tr>
@@ -1002,6 +1003,7 @@ Proceeds when <code>0</code> is randomly selected &amp; for loop is attempted on
 
 <p>If the first random value is <code>0</code> however, then the implicit range is <code>[]</code>. This is an illegal input to <code>randrange</code> which therefore throws a ValueError.</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
