--- a/q/55422.html
+++ b/q/55422.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::55422</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>016</td><td>Easyfuck</td><td>240325T150357Z</td><td><a href="https://codegolf.stackexchange.com/questions/55422/hello-world/272074#272074">Quadrupl</a></td></tr>
 <tr d-ix="1"><td>047</td><td>Java</td><td>230505T233947Z</td><td><a href="https://codegolf.stackexchange.com/questions/55422/hello-world/260712#260712">Olivier </a></td></tr>
 <tr d-ix="2"><td>080</td><td>Positionally</td><td>240301T062754Z</td><td><a href="https://codegolf.stackexchange.com/questions/55422/hello-world/271443#271443">Mukundan</a></td></tr>
@@ -22689,32 +22690,3 @@ GOTOPRINT()
 </code></pre>
 <p>Doubt it'll get smaller than this in Pyth.</p>
 </div>
-
-<table id="st">
-<!-- Popups content will be added here -->
-</table>
-
-<table id="at">
-<!-- Popups content will be added here -->
-</table>
-
-</div>
-
-
-
-
-
-  <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/55422/">55422</a></b>
-  </div>
-<div class="footer-space">&nbsp;</div>
-
-
-
-<script src="../c.js"> </script>
-</body>
-</html>
-
-
-
-
