--- a/q/262809.html
+++ b/q/262809.html
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>070</td><td>Scala 3</td><td>240227T092743Z</td><td><a href="https://codegolf.stackexchange.com/questions/262809/diagonalize-a-vector/271340#271340">t9dupuy</a></td></tr>
 <tr d-ix="1"><td>006</td><td>BQN</td><td>240226T235342Z</td><td><a href="https://codegolf.stackexchange.com/questions/262809/diagonalize-a-vector/271333#271333">DLosc</a></td></tr>
 <tr d-ix="2"><td>067</td><td>Python 3.8 prerelease</td><td>230714T202400Z</td><td><a href="https://codegolf.stackexchange.com/questions/262809/diagonalize-a-vector/262829#262829">Hunaphu</a></td></tr>
@@ -525,6 +526,7 @@ J        [1 .. length]
 </code></pre>
 <p>If the empty vector didn't have to be handled, this could tie non-flat as <code>jn`sL</code>; it passes all current test cases as <code>j¬</code> owing to all inputs being nonzero (which is not guaranteed by the spec).</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
