--- a/q/272546.html
+++ b/q/272546.html
@@ -26,9 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
+<tr d-ix="1"><td>014</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 57 bytes</h1>
+<pre><code>a=i,=0,
+while 1:
+ while i in a:i+=1
+ print i;a+=i,i*2,i*3
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m7O8oLIkIz_PaK--Y4i_fkpqWmJpTkl8UWleXmpRTUZqYoqCrqGBwYKlpSVpuhY3LRNtM3VsDXS4yjMyc1IVDK24FCCsTIXMPIVEq0xtW0MuhYKizLwShUzrRG2g6kwtIyA2hhgANWcBlIaQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://oeis.org/A036668" rel="nofollow noreferrer">A036668</a> - can't wait for someone smart to beat this.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p><sup>Can probably do better, but it's a start</sup></p>
 <pre><code>;;+ɗḤṬ;0i0Ṅṭ⁸ß
 </code></pre>
