--- a/q/272546.html
+++ b/q/272546.html
@@ -26,9 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
+<tr d-ix="0"><td>065</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
+<tr d-ix="1"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 65 bytes</h1>
+<pre><code>a=i,=0,
+while 1:
+ while i in a:i+=1
+ print i;a+=i,i*2,i*3,i*4,i*9
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m7O8oLIkIz_PaL--Y4i_fkpqWmJpTkl8UWleXmqRQo1CRmpiioKuoYHBgqWlJWm6FjcdE20zdWwNdLjKMzJzUhUMrbgUIKxMhcw8hUSrTG1bQy6FgqLMvBKFTOtEbaDqTC0jIDYGYhMgtoQYBDVvAZSGkAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This is <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a>, same as <a href="https://codegolf.stackexchange.com/a/272549">Neil's answer</a>.</p>
+<p><a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">Method found by math scat</a> as a simple fix for my initial idea (which they also thought of independently).</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
 <pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
 </code></pre>
 <p><a href="https://tio.run/##LY3BCsIwDIbP7imCpxQqTHf0pIIwcEO8iXioW1yLs51t5w7is9dOzSHkT77wVVLYyog2hFx3vS/7@4UsPtgyWTmnGo0pBxnTIFVLgDtyDo/IODwYg1cyKUT3B3NdWbqT9lT/XibqClgaj4Wp@9bgWjjCyON0kU05bJWucW@GqIuOAz3JxvsXkhw2wnm8sVgc0rGV1AhPOB/nLK5hb5X2ePqCkp2j8B3CPE3D7Nl@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
