--- a/q/272546.html
+++ b/q/272546.html
@@ -37,6 +37,9 @@
 <pre class="lang-javascript prettyprint-override"><code>for(i=1;g=k=&gt;i%k?0:1+g(k*h);i++)(g(h=2)-g(h=3))%3||print(i)
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNEts/j/Py2/SCPT1tA63Tbb1i5TNdvewMpQO10jWytD0zpTW1tTI10jw9ZIUxdEGWtqqhrX1BQUZeaVaGRq/v8PAA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<hr />
+<p>For cardinality thing, obviously 1 can be chosen or unchosen, 5 can, 5<sup>2</sup> can...; = 2<sup>N</sup></p>
+<p>For density thing, <a href="https://tio.run/##FcxBCoAgEADA1wS7bZHlJZKtt0SQbkKFiSf/bnWa2xxrWp8tyB3bNJaynZGV2a8Awr2x7HmWyi9q6smCrx0aIUKw4HjA9kcjVjrnO8gZQRqir@gES3kB" rel="nofollow noreferrer">this solution goes to 0.472</a>, which I'd say far enough to reject 1/3 assumption</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
 <pre><code>ọⱮ3IṪ3ḍµ#
