--- a/q/250338.html
+++ b/q/250338.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::250338</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>003</td><td>Thunno 2 S</td><td>230722T164048Z</td><td><a href="https://codegolf.stackexchange.com/questions/250338/shifted-auto-sum/263180#263180">The Thon</a></td></tr>
 <tr d-ix="1"><td>011</td><td>J</td><td>221112T001833Z</td><td><a href="https://codegolf.stackexchange.com/questions/250338/shifted-auto-sum/254498#254498">naffetS</a></td></tr>
 <tr d-ix="2"><td>009</td><td>GolfScript</td><td>221115T020747Z</td><td><a href="https://codegolf.stackexchange.com/questions/250338/shifted-auto-sum/254568#254568">Twilight</a></td></tr>
@@ -682,7 +681,6 @@ log10  ! 123 2.089905111439398
    ∑ # Sum
 </code></pre>
 </div>
-<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -699,7 +697,7 @@ log10  ! 123 2.089905111439398
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/250338/">250338</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
