--- a/q/272560.html
+++ b/q/272560.html
@@ -26,41 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>137</td><td>Python 2</td><td>240414T080318Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272562#272562">pxeger</a></td></tr>
+<tr d-ix="0"><td>135</td><td>Python</td><td>240414T080318Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272562#272562">pxeger</a></td></tr>
 <tr d-ix="1"><td>091</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 137 bytes</h1>
-<pre><code>a=i,={0}
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 135 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>a=i,={0}
 while 1:
  i=n=i+1;t=a-a
  while n&gt;1:
   for p in range(2,n+1):
-   if n%p&lt;1:n/=p;t|=a&amp;{i/p,i/p/p};break
- if{0}&gt;t:print i;a|={i}-{1}
+   if n%p&lt;1:n//=p;t|=a&amp;{i/p,i/p/p};break
+ if{0}&gt;t:print(i);a|={i}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=NY5BCsIwEEX3PcVsFKUpNV1J4_QuERo7KNMhRETSHMAzuOlGPJO3saW6-KsH_73nW-6h67kax9c1uGL_eVgkhXGXsltHlxZ0nQEhI-XaBLSFzWAB3MwIXO9BgBi85VO7qRTnejsDIAe8koOuuUQxYUC7jlSKmlZKMkff2vP07SZXE2rxxAHI2AEjpSLqtAT9uv59Xw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>This is a generalisation of <a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">math scat's method</a> which I used in <a href="https://codegolf.stackexchange.com/a/272548/97857">my answer to the previous question</a>. It produces a different sequence to the one att found, but it seems to work:</p>
-<pre><code>1 = 1
-4 = 2*2
-9 = 3*3
-24 = 2*2*2*3
-25 = 5*5
-30 = 2*3*5
-32 = 2*2*2*2*2
-40 = 2*2*2*5
-49 = 7*7
-54 = 2*3*3*3
-56 = 2*2*2*7
-70 = 2*5*7
-121 = 11*11
-126 = 2*3*3*7
-132 = 2*2*3*11
-135 = 3*3*3*5
-144 = 2*2*2*2*3*3
-154 = 2*7*11
-165 = 3*5*11
-</code></pre>
-<p>It's not on OEIS.</p>
+<p><a href="https://ato.pxeger.com/run?1=LY7BasJAEIbveYq5WBSzXVcRStIVfIJevJfR7JqhYbIsE4okOfclPHhp38m36Uo8_PP_wwcz__UvXKRu-b7V-8OHrpzHrpHP2DG7CAPUDitQm1WKp05AVa-gvEmbx5O08fbbiVdv9x-0lNt-NWbfNTUOTJEBWba0NKVYVJjBBHj3QODbCAGIISKf3Xyd89IsHgDIA8_CuylYaxtKGSy-9KRDnqTDWB6jw6903KdnOylCJJY5LUocbE_jVOfZ6vb0af4D" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This is a generalisation of <a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">math scat's method</a> which I used in <a href="https://codegolf.stackexchange.com/a/272548/97857">my answer to the previous question</a>. It produces the same sequence to the one att found.</p>
 <h2>Explanation</h2>
 <pre><code>a=i,={0}                             # a = empty set †
 while 1:                             # for each i &gt; 1:
