--- a/q/272523.html
+++ b/q/272523.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>072</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
+<tr d-ix="0"><td>069</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
 <tr d-ix="1"><td>027</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
 <tr d-ix="2"><td>140</td><td>C++</td><td>240413T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272551#272551">Good Soy</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Charcoal</td><td>240412T194016Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272530#272530">Neil</a></td></tr>
@@ -40,15 +40,17 @@
 <tr d-ix="11"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
 <tr d-ix="12"><td>031</td><td>Google Sheets</td><td>240412T211245Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272531#272531">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, 72 bytes</h1>
-<pre><code>s/(.*) (.*)/echo {\1..\2}\\ 2op|dc/e  #converts two numbers into a binary range
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, <s>72</s> 69 bytes</h1>
+<pre><code>s/(.*) (.*)/echo 2o{\1..\2}p|dc/e     #converts two numbers into a binary range
 s/.*1(0*)$/\1/gm                      #keep only the last 0s of each line
 s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in longest line
 </code></pre>
-<p><a href="https://tio.run/##K05N0U3PK/3/v1hfQ09LUwFE6KcmZ@QrVMcY6unFGNXGxCgY5RfUpCTrp3IV6@tpGWoYaGmq6McY6qfnggX0y5MVdH1sbGyU1JT0U///N1EwtPyXX1CSmZ9X/F@3CAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K05N0U3PK/3/v1hfQ09LUwFE6KcmZ@QrGOVXxxjq6cUY1RbUpCTrp3IV6@tpGWoYaGmq6McY6qfnggX0y5MVdH1sbGyU1JT0U///N1EwtPyXX1CSmZ9X/F@3CAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <p>I feel like if I were smarter about it there should be a way to entierly remove that second line, but this is as good as I'll be able to get it today.</p>
 <p>more detailed explanation:</p>
-<p>the first swap converts two numbers seperated by a space (eg, '<code>4 9</code>') into  <code>echo {4..9}\ 2op|dc</code>. the <code>e</code> flag means we <code>e</code>xecute, so bash then expands that into <code>echo 4 2op 5 2op 6 2op 7 2op 8 2op 9 2op | dc</code>. <code>echo</code> echos its input to stdin, which <code>dc</code>(desk calculator) reads. space-seperated numbers get put on the stack, <code>o</code> pops one number for the output base and then <code>p</code> pops one number to print in that base.</p>
+<p>the first swap converts two numbers seperated by a space (eg, '<code>4 9</code>') into<br />
+<code>echo 2o{4..9}p|dc</code>. the <code>e</code> flag means we <code>e</code>xecute, so bash then expands that into<br />
+<code>echo 2o4p 2o5p 2o6p 2o7p 2o8p 2o9p | dc</code>. <code>echo</code> echos its input to stdout, which <code>dc</code>(desk calculator) reads. space-seperated numbers get put on the stack, <code>o</code> pops one number for the output base and then <code>p</code> pops one number to print in that base.</p>
 <p>now we have binary numbers seperated by newlines. this next swap is <code>g</code>lobal and <code>m</code>ultiline. we capture a group of 0s prefixed by <code>1</code> and suffixed by <code>$</code>, ie the last string of 0s of each line, and replace the full line with that group.</p>
 <p>now we have 0s seperated by newlines. we take the full input and send it to <code>wc</code>(word count). <code>-L</code> gives the longest line, which is our output</p>
 </div>
