--- a/q/272425.html
+++ b/q/272425.html
@@ -82,7 +82,7 @@
 <h2><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 25 bytes</h2>
 <pre class="lang-python prettyprint-override"><code>print('1'*int(input()),0)
 </code></pre>
-<p>Uses a less strict output format</p>
+<p>Uses a less strict output format. Thanks to <a href="https://codegolf.stackexchange.com/users/87219/ayreguitar">@ayreguitar</a> and <a href="https://codegolf.stackexchange.com/users/120119/none1">@None1</a></p>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwZryjMycVIWQotJUq5ilpSVpuhY7C4oy80o01A3VtUB0Zl5BaYmGpqaOgSZEfgGUWm3AZchlxGXMZcJlChECAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
