--- a/q/272569.html
+++ b/q/272569.html
@@ -26,10 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
-<tr d-ix="1"><td>268</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="0"><td>270</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="1"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 270 bytes</h1>
+<p>A full program.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>print(`O-O
+O-O-O`);s=&quot;NBRQK&quot;;g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y;for(n=65536;n--;h=(X-x)**2,v=(V=Y-y)*V,h+v&lt;1|[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|V*(h-~i%2)-1|Y&gt;6^i&gt;7||print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:&quot;&quot;)
+</code></pre>
+<p><a href="https://tio.run/##ZVBRa4MwEH7vr8gCk0SNpRZttywZDPY0WNkepMU5ap01KTZK40RB@te72D7u4e6@u@/u4/gOaZvq7CTrhrTLS5k3oJS6AQzECQX1SaoRa8A40J6uS9kg@KUg9vbV6TXNBLpS44lX/2rTYkwv1zO0XZHVxARZbTHVDL6/fH68QVow1Lk9Zhymu@wn3xcCxl3ikHNPjSZSLAyCeUgVIVQwtCYdtm3fbRmK2Ib02I5c4bRPsyE2hQTujgnSusJu3Z09ZjPlvtuT2RARfxBJLJNhkDywrLt@iGwkyFne@9jwGx5@S74Yhtu7R4yPLNaxZIrzmZ8kToG6EYfWwu1H8GAtsANJB2NpSR6OC2umDLtharocSWT0niGDjpGZ@tY8eYQQX7JK6arMvbIq0NWpMldFI4ADIDhWba4hppN/S4dKqpvXxtE/" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
 <pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸ＦΦ⁸∨⁻λι⁻μκ«Ｅ⎇⁼⁵⁺Ｘ⁻λι²Ｘ⁻μκ²N⁺…K∧‹↔⁻λι²‹↔⁻μκ²⭆⁺…B⁼↔⁻λι↔⁻μκ…R∨⁼λι⁼μκ⁺νQ⪫⟦ν§βι⊕κ-§βλ⊕μ⟧ω¿∧⁼¹⁻μκ‹↔⁻λι²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦§βι⊕κ§-x⁻λι§βλ⊕μν⟧ω¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
 </code></pre>
 <p><a href="https://tio.run/##hVFNT8JAED3Dr9jsaZosB1AiifEARBNUvr2RHkpZZMOyxW2xEONvr7PtFmpTtEnbzNeb9974G0/7gSeTZKKFimDo7YHetCkj/ZMveX8TYDxumNgLIxAOPvf1daAJdBxS@X8SMuIaOoyMNQyFOoQgGREOI1mwY2RrYMhXvXZZ@sa18vQJHj8OngyhzchEYvMkiHkJpYVvMZ3imbSDXzqidrLA/wVzXbWCVx6G0F2GgTxEvAhqUavqGdscfh4h4XfDt7yjhzss9ysbKoFNoYAyo6lrFsgKtpEdsPIUap3SDOA5EAoWmOlGA7XiR1hmgwPla77jKuIrMBZRc8dCjyz17ByXkTi9cE2sCRjP7PLm7@tVe3XxEq9rALYOuXphBLrLxdAHJDbfSxEBHfVmU4yaBmgRu2d5/2jLy7RxpDnXs/N/SWZE5aoJlyFPiRcPkGtYZDxi9LFljKS31C1Z7rho3XeSJI1P@QM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -51,15 +60,6 @@
 <pre><code>¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
 </code></pre>
 <p>Otherwise if this is a plain move then output a doubled pawn move for this file.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 268 bytes</h1>
-<p>A full program.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>print(`O-O
-O-O-O`);s=&quot;NBRQK&quot;;g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y;for(n=65536;n--;h=(X-x)**2,v=(V=Y-y)*V,h+v&lt;1|[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|V*(h-~i%2)-1|Y&gt;6^i&gt;7||print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i&amp;3]:&quot;&quot;)
-</code></pre>
-<p><a href="https://tio.run/##ZVBRa4MwEH7fr8gCk0SNoxZttywZDPY0WNkepMU5ap01KTaWxolC6F/vYvu4h7v77r67j@Pb5V2ui6M8tKSbn@uyBbXULWAgzSg4HKUasQaMAx3oQy1bBL8UxMG2Ob7mhUAXajwJDr/athjT8@UMrRdkcWODLNaYagbfXz4/3iCtGOr9ATMO803xU24rAdM@88hpoFYTKRZH0TSmihAqGFqSHrtu6HcMJWxFBuwmvvC6p4lJbSGRv2GCdL5wO3/jjtlOeegPZGISEhqRpTIzRvLIcW4Hk7hIkJO8C7HlVzz@lnxmzPXdPcZ7lupUMsX5JMwyr0L9iGNn5g8jeHBm2IOkh6l0JI/HhSVTll0xdT8fSWT1niGDnpVxptkjhPhcNEo3dRnUTYUuPtWlqloBPADBvulKDTG9@be0a6S6Om39/AM" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-<p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
 </div>
 
 <table id="st">
