--- a/q/272569.html
+++ b/q/272569.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>270</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="0"><td>269</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
 <tr d-ix="1"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 270 bytes</h1>
-<p>A full program.</p>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 269 bytes</h1>
+<p>A full program that prints all possible white moves.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>print(`O-O
-O-O-O`);s=&quot;NBRQK&quot;;g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y;for(n=65536;n--;h=(X-x)**2,v=(V=Y-y)*V,h+v&lt;1|[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|V*(h-~i%2)-1|Y&gt;6^i&gt;7||print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:&quot;&quot;)
+O-O-O`);s=&quot;NBRQK&quot;;g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y;for(n=65536;n--;h=(X-x)**2,V=Y-y,v=V*V,[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|V*(h-~i%2)-1|Y&gt;6^i&gt;7||h|v&amp;&amp;print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:&quot;&quot;)
 </code></pre>
-<p><a href="https://tio.run/##ZVBRa4MwEH7vr8gCk0SNpRZttywZDPY0WNkepMU5ap01KTZK40RB@te72D7u4e6@u@/u4/gOaZvq7CTrhrTLS5k3oJS6AQzECQX1SaoRa8A40J6uS9kg@KUg9vbV6TXNBLpS44lX/2rTYkwv1zO0XZHVxARZbTHVDL6/fH68QVow1Lk9Zhymu@wn3xcCxl3ikHNPjSZSLAyCeUgVIVQwtCYdtm3fbRmK2Ib02I5c4bRPsyE2hQTujgnSusJu3Z09ZjPlvtuT2RARfxBJLJNhkDywrLt@iGwkyFne@9jwGx5@S74Yhtu7R4yPLNaxZIrzmZ8kToG6EYfWwu1H8GAtsANJB2NpSR6OC2umDLtharocSWT0niGDjpGZ@tY8eYQQX7JK6arMvbIq0NWpMldFI4ADIDhWba4hppN/S4dKqpvXxtE/" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##ZVDRaoMwFH3vV2SBSaKJZZbabpIMBnsarGwP0uIctc6aFBulcaIQ@utdbB/3cC/n3nPP4XIOWZfp/CSblnbLS1W0oJK6BQwkaQSak1Qj1oBxoH3dVLJF8EtB7O/r02uWC3SlRonf/Go7YhxdrjK0XdHVxBZdbXGkGXx/@fx4g1HJUE8GzDjMdvlPsS8FTPrUo@chsp5IsXA@n4WRojQSDK1pj103IDHb0IF0LHZjkgivo3OyY4J2RLgd2bljt1sekIE@mJgGRqSJTI2RfO44d4OJXSToWd4H2PIbHn5LvjBGmM5xbt8eMT6yRCeSKc4fgjT1StSPOHQWZBjBo7PAHqQ9TKQjeTgerJmy7Iap6XIkkTV9hgx61mYaOLP0CUJ8yWul66rwq7pE16CqQpWtAB6A4Fh3hYY4mvw7OtRS3aK2gf4B" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
