--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/255042.html">CGAC2022 Day 1: Lets build a chocolate pyramid! : 0255042</a>
 <a href="q/109657.html">Sum the powers that be                          : 0109657</a>
 <a href="q/229979.html">Draw an ASCII Grid                              : 0229979</a>
 <a href="q/248352.html">Count /[^a-z]/ig with /[a-z]/ig                 : 0248352</a>
