--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
+<a href="q/255274.html">CGAC2022 Day 7: Fen The Wicked                  : 0255274</a>
 <a href="q/255042.html">CGAC2022 Day 1: Lets build a chocolate pyramid! : 0255042</a>
 <a href="q/109657.html">Sum the powers that be                          : 0109657</a>
 <a href="q/229979.html">Draw an ASCII Grid                              : 0229979</a>
@@ -1592,7 +1594,6 @@
 <a href="q/71524.html">Output the van der Corput sequence              : 0071524</a>
 <a href="q/263121.html">Generate the Crystal Maze™ time matrix          : 0263121</a>
 <a href="q/223792.html">Close neighbours stick together                 : 0223792</a>
-<a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
 <a href="q/262985.html">Numbers that can be negated by reading backwards: 0262985</a>
 <a href="q/68371.html">Pi Day Pi Minute or Pi Second?                  : 0068371</a>
 <a href="q/251805.html">Find the GCD and LCM of a list of numbers       : 0251805</a>
