--- a/q/272569.html
+++ b/q/272569.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>265</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="0"><td>264</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
 <tr d-ix="1"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 265 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 264 bytes</h1>
 <p>A full program that prints all possible white moves.</p>
 <pre class="lang-javascript prettyprint-override"><code>s=&quot;NBRQK&quot;
 g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y
-for(n=65023;n--;h=(X-x)**2,V=Y-y,v=V*V,[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|h^i&amp;1|V-1|Y&gt;6^i&gt;7||h|v&amp;&amp;print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:n-10?&quot;&quot;:`
+for(n=66e3;n--;h=(X-x)**2,V=Y-y,v=V*V,[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|h^i&amp;1|V-1|Y&gt;6^i&gt;7||h|v&amp;&amp;print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:n-10?&quot;&quot;:`
 O-O
 O-O-O`)
 </code></pre>
-<p><a href="https://tio.run/##ZVDRasIwFH33K7I8hKRNdFaszpIIgz0NJtuDKF3F2tUmUlMxXWkh7Ndd4x73cC/n3nPugXtOaZOa7KouNWvmtzKvQalMDTiIkwhcrko7bAAXwAzNpVQ1hp8akuGxur6kmcR3yp0ML9@mHwmJbobDt@eP91c4KDhuaUe4gOkh@8qPhYRxm/jspxv0BljzcPoYTCLNWCQ53rCWeF5A13zLOtrwtbemsfQbNqUHLllDpdfQg@d6vxUB7djYrllgZRKrxFolpgg9dFbuFHLE2G5FuFNiZq20DUL3d/CZkDOPTay4FmIcJIlf4NbhEM1o58ATmhEfshbGCikROsGG657dcj2aOxL3pkvIod/bjAI0SRaajR@XEC72gxVbuWKrPblllTZVmQ/LqsD3kMpcF7UEPoDgXDW5gSQa/BOdKqX/Yu7D/AU" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##ZVBda8IwFH3vr8jyEJI20VmxOksiDPY0mGwPRekqfqw2kZqK6UoLYX/dNe5xD/dy7j3nHrjntGt25nBVl5o1s1uZ16BUpgYcpFkMLlelHTaAC2AG5lKqGsNPDcngWF1fdgeJ75Q7GVy@TT8SEt8Mh2/PH@@v0Cs4bmlHuIC7/eErPxYSpm0WsJ/O6w2w5lGUj2PNWCw5XrGW@H5IE75mHW144ic0lUHDJnTPJWuo9Bu6913vtyKkHRvZhIVWZqnKrFVigtBDZ@VGIUeM7FpEGyWm1krbIHT/Bp8JOfPUpIprIUZhlgUFbh2O0JR2DjyhKQkga2GqkBKRE6y47tk118OZI3FvuoAcBr3NMETjbK7Z6HEB4XzrLdnSFVtuye1QaVOV@aCsCnzPqMx1UUsQAAjOVZMbSGLvn@hUKf2Xcp/lLw" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
 <h2>Explanation</h2>
 <h3>Encoding</h3>
