--- a/q/68371.html
+++ b/q/68371.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::68371</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>229</td><td>Pascal FPC</td><td>230315T175316Z</td><td><a href="https://codegolf.stackexchange.com/questions/68371/pi-day-pi-minute-or-pi-second/259162#259162">roblogic</a></td></tr>
 <tr d-ix="1"><td>226</td><td>Pascal</td><td>230314T151415Z</td><td><a href="https://codegolf.stackexchange.com/questions/68371/pi-day-pi-minute-or-pi-second/259116#259116">Kai Burg</a></td></tr>
 <tr d-ix="2"><td>045</td><td>Japt</td><td>230315T122625Z</td><td><a href="https://codegolf.stackexchange.com/questions/68371/pi-day-pi-minute-or-pi-second/259145#259145">Shaggy</a></td></tr>
@@ -465,6 +466,7 @@ $&gt;&lt;&lt;                        # output...
 ][i]                        # index by index (obviously)
 </code></pre>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -481,7 +483,7 @@ $&gt;&lt;&lt;                        # output...
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/68371/">68371</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
